--- a/htg/htg.css
+++ b/htg/htg.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../assets/img/bg.png");
+    background-image: url("../assets/img/bg.png");
     background-color: #ffffff;
     background-size: 1380px;
     background-repeat: no-repeat;
